--- a/Files_Manipulation.ipynb
+++ b/Files_Manipulation.ipynb
@@ -12,30 +12,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "_NXz7PBlN_KU"
       },
       "outputs": [],
       "source": [
-        "# Libraries\n",
+        "# imoport necassary packages (Libraries)\n",
         "import os\n",
         "import glob\n",
         "import shutil\n",
         "import sys\n",
         "from pathlib import Path\n",
         "import pandas as pd"
-      ]
-    },
-    {
-      "cell_type": "raw",
-      "metadata": {
-        "id": "Q1CPUWQErNVy",
-        "outputId": "167d0613-45ed-46cd-9d7e-b5b6c522fb3c"
-      },
-      "source": [
-        "from google.colab import drive \n",
-        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -49,25 +38,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
         "id": "RQW0WobmsVDn",
-        "outputId": "1b2ccbef-83ba-4bb2-cd23-8d07dbafd582"
+        "outputId": "07ebd866-8df6-4645-a7da-76644056f0f4"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'/home/e57658/workspace/Excel_Automation_Python'"
-            ]
+              "'/content'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 2,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 3
         }
       ],
       "source": [
@@ -76,25 +68,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
         "id": "wNN4C39Op3GR",
-        "outputId": "51833ffb-7372-48f0-f356-1f7035b87814"
+        "outputId": "b2843d96-4468-48ba-99f2-6f2a7cb541aa"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'/home/e57658/workspace/Excel_Automation_Python'"
-            ]
+              "'/content'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 3,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 4
         }
       ],
       "source": [
