--- a/Files_Manipulation_Module_2_good.ipynb
+++ b/Files_Manipulation_Module_2_good.ipynb
@@ -701,9 +701,12 @@
         "            print(len(fileNames), \"Files = \", fileNames )\n",
         "            print('-'*10)\n",
         "\n",
+        "            \n",
+        "\n",
         "# call function << folder_tree_2 >> on your cwd\n",
         "# it will return all Directory Paths with contained sub_directories and files\n",
         "# nb of sub_directories and files\n",
+        "\n",
         "folder_tree_2(cwd)"
       ],
       "metadata": {
@@ -780,26 +783,45 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 4.&nbsp;Looking for Files with extensions"
+      ],
+      "metadata": {
+        "id": "FCmGQXHAsiwd"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pOhA88_hwXk7",
-        "outputId": "4fb9a80d-ae7e-4f01-9366-56785b673a03"
+        "outputId": "698f9844-65dd-4549-dc91-33232544cc7d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "there are 12 excel files:  ['DE (2).xlsx', 'UK_old (2).xlsx', 'FR (2).xlsx', 'UK_old.xlsx', 'UK (1).xlsx', 'UK.xlsx', 'UK (2).xlsx', 'DE.xlsx', 'FR.xlsx', 'DE (1).xlsx', 'UK_old (1).xlsx', 'FR (1).xlsx']\n"
+            "there are 4 excel files: \n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['UK_old.xlsx', 'UK.xlsx', 'DE.xlsx', 'FR.xlsx']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ],
       "source": [
-        "# list of all excel files in the working directory\n",
+        "# create a list  \"excel_files\" with all files that have the extension excel_files in the working directory\n",
         "\n",
         "excel_files=[]\n",
         "for file in os.listdir(cwd):\n",
@@ -807,39 +829,32 @@
         "            excel_files.append(file)\n",
         "            \n",
         "# it will print out excel names present in current directory folder = 'Basics_Python\"\n",
-        "print( 'there are', len(excel_files), \"excel files: \", excel_files)"
+        "print( 'there are', len(excel_files), \"excel files: \")\n",
+        "excel_files"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "T9-EafJPwlNw",
-        "outputId": "e96bf69a-e075-47be-a977-2e2c303bb1c8"
+        "outputId": "b8b7705b-16db-47e9-aea1-5c18ca0b6f00"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['/content/DE (2).xlsx', '/content/UK_old (2).xlsx', '/content/FR (2).xlsx', '/content/UK_old.xlsx', '/content/UK (1).xlsx', '/content/UK.xlsx', '/content/UK (2).xlsx', '/content/DE.xlsx', '/content/FR.xlsx', '/content/DE (1).xlsx', '/content/UK_old (1).xlsx', '/content/FR (1).xlsx']\n",
+            "['/content/UK_old.xlsx', '/content/UK.xlsx', '/content/DE.xlsx', '/content/FR.xlsx']\n",
             "\n",
             "File names with their paths:\n",
-            "/content/DE (2).xlsx\n",
-            "/content/UK_old (2).xlsx\n",
-            "/content/FR (2).xlsx\n",
             "/content/UK_old.xlsx\n",
-            "/content/UK (1).xlsx\n",
             "/content/UK.xlsx\n",
-            "/content/UK (2).xlsx\n",
             "/content/DE.xlsx\n",
-            "/content/FR.xlsx\n",
-            "/content/DE (1).xlsx\n",
-            "/content/UK_old (1).xlsx\n",
-            "/content/FR (1).xlsx\n"
+            "/content/FR.xlsx\n"
           ]
         }
       ],
@@ -858,7 +873,7 @@
         "# and then store them all into a list called \"filespaths\"\n",
         "\n",
         "\n",
-        "filespaths = glob.glob(cwd + \"/*.xlsx\")  \n",
+        "filespaths = glob.glob(cwd + \"/*.xlsx\")  # create a list that from cwd, will pick up every the ABSOLUTE PATH for files with extention .xlsx\n",
         "print(filespaths)\n",
         "print(\"\")\n",
         "\n",
@@ -874,7 +889,7 @@
         "id": "cVcMXwSp_dfS"
       },
       "source": [
-        "# Change working directory"
+        "# 4.&nbsp;Change working directory"
       ]
     },
     {
