--- a/Files_Manipulation_Module_2_good.ipynb
+++ b/Files_Manipulation_Module_2_good.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "_NXz7PBlN_KU"
       },
@@ -45,10 +45,22 @@
         "drive.mount('/content/gdrive')"
       ],
       "metadata": {
-        "id": "8GkeyXnRAA_-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8GkeyXnRAA_-",
+        "outputId": "ae810c9b-203c-49f2-d66b-1136f7790cd4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -70,11 +82,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "ce7e2b3a-09e7-4f28-f0cc-f7f9d4420161",
         "id": "bbKBUTlTYHZB"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The current working directory is : \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
       "source": [
         "# get absolute path to current working directory\n",
         "\n",
@@ -92,10 +130,29 @@
         "cwd"
       ],
       "metadata": {
-        "id": "HOSQo6ofYZIi"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "HOSQo6ofYZIi",
+        "outputId": "0151374d-3137-4583-cbeb-532a2288d7e5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -105,10 +162,25 @@
         "os.listdir('.') #  ==> we have 3 directories : config, gdrive, sample_data and other files"
       ],
       "metadata": {
-        "id": "YAud5pWJjR7D"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YAud5pWJjR7D",
+        "outputId": "2b14f856-be41-4908-8c27-aee3210c7220"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['.config', 'gdrive', 'sample_data']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -118,10 +190,22 @@
         "print(os.listdir('sample_data'))"
       ],
       "metadata": {
-        "id": "aRUp1uLfjgcx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aRUp1uLfjgcx",
+        "outputId": "7013c6cc-452f-467f-fe62-80239b73d898"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['README.md', 'anscombe.json', 'california_housing_train.csv', 'mnist_train_small.csv', 'mnist_test.csv', 'california_housing_test.csv']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -144,17 +228,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# check conaining in gdrive directory with aboslute path\n",
+        "# check containing in gdrive directory with aboslute path\n",
         "\n",
         "print(os.listdir('/content/gdrive')) \n",
         "print(os.listdir('/content/gdrive/MyDrive'))\n",
         "print(os.listdir('/content/gdrive/MyDrive/Colab Notebooks'))"
       ],
       "metadata": {
-        "id": "W1nieMycjfI6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W1nieMycjfI6",
+        "outputId": "1e5a0b8b-7d1e-4f02-8e97-c0324059a56f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['MyDrive', '.file-revisions-by-id', '.shortcut-targets-by-id', '.Trash-0']\n",
+            "['Colab Notebooks']\n",
+            "['Python_Basics_Module_1 (10).ipynb', 'Practice_Module_1.ipynb', 'Python_Basics_Module_1_Cohort_1.ipynb', 'Basics_Module_1_Cohort_1 (1).ipynb', 'Basics_Module_1_Cohort_1.ipynb', 'Python_Basics_Module_1 (9).ipynb', 'Python_Basics_Module_1 (8).ipynb', 'Python_Basics_Module_1 (7).ipynb', 'Python_Basics_Module_1 (6).ipynb', 'Python_Basics_Module_1 (5).ipynb', 'Python_Basics_Module_1 (4).ipynb', 'Python_Basics_Module_1 (3).ipynb', 'Python_Basics_Module_1 (2).ipynb', 'Python_Basics_Module_1 (1).ipynb', 'Python_Basics_Module_1_back_up.ipynb', 'Python_Basics_Module_1.ipynb', 'Files_Manipulation (1).ipynb', ' Files_Manipulation_Module_2_Practice.ipynb', 'Files_Manipulation.ipynb', 'Files_Manipulation_v2.ipynb', 'Manipulation_Module_2.ipynb', 'Fille_Manipulation_Module_2_Practice.ipynb', 'Copy of Python_Basics_Module_1.ipynb', 'Files_Manipulation_Module_2_good (1).ipynb', 'Files_Manipulation_Module_2.ipynb', 'Files_Manipulation_Module_2_good.ipynb']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,7 +350,7 @@
       "source": [
         "# delete files\n",
         "\n",
-        "os.unlink('New_Folder')"
+        "#os.unlink('New_Folder')"
       ],
       "metadata": {
         "id": "AF9Mu1YK7v-z"
@@ -1193,7 +1291,7 @@
       },
       "outputs": [],
       "source": [
-        "# FR\n",
+        "# UK\n",
         "filename = 'UK.xlsx'\n",
         "uk = pd.read_excel(filename, index_col=None, header=0)\n",
         "\n",
